--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1874,188 +1874,112 @@
 		border-color: rgba(144, 144, 144, 0.25);
 	}
 
-/* Button */
+	/* Buttons */
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		-moz-appearance: none;
-		-webkit-appearance: none;
-		-ms-appearance: none;
-		appearance: none;
-		-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		border-radius: 2px;
-		border: 0;
-		cursor: pointer;
-		display: inline-block;
-		font-weight: 300;
-		height: 2.85rem;
-		line-height: 2.95rem;
-		padding: 0 1.5rem;
-		text-align: center;
-		text-decoration: none;
-		text-transform: uppercase;
-		white-space: nowrap;
+ul.buttons {
+	cursor: default;
+	list-style: none;
+	padding-left: 0;
+}
+
+	ul.buttons:last-child {
+		margin-bottom: 0;
 	}
 
-		input[type="submit"].icon,
-		input[type="reset"].icon,
-		input[type="button"].icon,
-		button.icon,
-		.button.icon {
-			padding-left: 1.35rem;
+	ul.buttons li {
+		display: inline-block;
+		padding: 0 0 0 1.5em;
+	}
+
+		ul.buttons li:first-child {
+			padding: 0;
 		}
 
-			input[type="submit"].icon:before,
-			input[type="reset"].icon:before,
-			input[type="button"].icon:before,
-			button.icon:before,
-			.button.icon:before {
-				margin-right: 0.5rem;
+	ul.buttons.stacked li {
+		display: block;
+		padding: 1.5em 0 0 0;
+	}
+
+		ul.buttons.stacked li:first-child {
+			padding: 0;
+		}
+
+	/* Button */
+
+		input[type="button"],
+		input[type="submit"],
+		input[type="reset"],
+		button,
+		.button {
+			-moz-appearance: none;
+			-webkit-appearance: none;
+			-ms-appearance: none;
+			appearance: none;
+			-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+			-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+			-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+			transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
+			background: none;
+			border: solid 1px;
+			border-radius: 0;
+			color: inherit;
+			cursor: pointer;
+			display: inline-block;
+			font-size: 0.8em;
+			font-weight: 900;
+			letter-spacing: 2px;
+			min-width: 18em;
+			padding: 0 0.75em;
+			line-height: 3.75em;
+			text-align: center;
+			text-decoration: none;
+			text-transform: uppercase;
+		}
+
+			input[type="button"]:hover,
+			input[type="submit"]:hover,
+			input[type="reset"]:hover,
+			button:hover,
+			.button:hover {
+				background: rgba(188, 202, 206, 0.15);
+				border-color: inherit;
 			}
 
-		input[type="submit"].fit,
-		input[type="reset"].fit,
-		input[type="button"].fit,
-		button.fit,
-		.button.fit {
-			display: block;
-			margin: 0 0 1rem 0;
-			width: 100%;
-		}
+			input[type="button"].primary,
+			input[type="submit"].primary,
+			input[type="reset"].primary,
+			button.primary,
+			.button.primary {
+				background: #028CB8;
+				border-color: #028CB8;
+				color: #fff !important;
+			}
 
-		input[type="submit"].small,
-		input[type="reset"].small,
-		input[type="button"].small,
-		button.small,
-		.button.small {
-			font-size: 0.8rem;
-		}
+				input[type="button"].primary:hover,
+				input[type="submit"].primary:hover,
+				input[type="reset"].primary:hover,
+				button.primary:hover,
+				.button.primary:hover {
+					background: #96dad1 !important;
+					border-color: #96dad1 !important;
+				}
 
-		input[type="submit"].big,
-		input[type="reset"].big,
-		input[type="button"].big,
-		button.big,
-		.button.big {
-			font-size: 1.35rem;
-		}
-
-		input[type="submit"].disabled, input[type="submit"]:disabled,
-		input[type="reset"].disabled,
-		input[type="reset"]:disabled,
-		input[type="button"].disabled,
-		input[type="button"]:disabled,
-		button.disabled,
-		button:disabled,
-		.button.disabled,
-		.button:disabled {
-			-moz-pointer-events: none;
-			-webkit-pointer-events: none;
-			-ms-pointer-events: none;
-			pointer-events: none;
-			opacity: 0.25;
-		}
-
-		@media screen and (max-width: 480px) {
-
-			input[type="submit"],
-			input[type="reset"],
-			input[type="button"],
-			button,
-			.button {
-				padding: 0;
+			input[type="button"].fit,
+			input[type="submit"].fit,
+			input[type="reset"].fit,
+			button.fit,
+			.button.fit {
 				width: 100%;
 			}
 
-		}
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		background-color: #f2f2f2;
-		color: #000 !important;
-	}
-
-		input[type="submit"]:hover,
-		input[type="reset"]:hover,
-		input[type="button"]:hover,
-		button:hover,
-		.button:hover {
-			background-color: white;
-		}
-
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		input[type="button"]:active,
-		button:active,
-		.button:active {
-			background-color: #e5e5e5;
-		}
-
-		input[type="submit"].alt,
-		input[type="reset"].alt,
-		input[type="button"].alt,
-		button.alt,
-		.button.alt {
-			background-color: transparent;
-			box-shadow: inset 0 0 0 2px rgba(144, 144, 144, 0.25);
-			color: #555 !important;
-		}
-
-			input[type="submit"].alt:hover,
-			input[type="reset"].alt:hover,
-			input[type="button"].alt:hover,
-			button.alt:hover,
-			.button.alt:hover {
-				background-color: rgba(144, 144, 144, 0.075);
-			}
-
-			input[type="submit"].alt:active,
-			input[type="reset"].alt:active,
-			input[type="button"].alt:active,
-			button.alt:active,
-			.button.alt:active {
-				background-color: rgba(144, 144, 144, 0.2);
-			}
-
-			input[type="submit"].alt.icon:before,
-			input[type="reset"].alt.icon:before,
-			input[type="button"].alt.icon:before,
-			button.alt.icon:before,
-			.button.alt.icon:before {
-				color: #bbb;
-			}
-
-		input[type="submit"].special,
-		input[type="reset"].special,
-		input[type="button"].special,
-		button.special,
-		.button.special {
-			background-color: #8a4680;
-			color: #ffffff !important;
-		}
-
-			input[type="submit"].special:hover,
-			input[type="reset"].special:hover,
-			input[type="button"].special:hover,
-			button.special:hover,
-			.button.special:hover {
-				background-color: #9b4f90;
-			}
-
-			input[type="submit"].special:active,
-			input[type="reset"].special:active,
-			input[type="button"].special:active,
-			button.special:active,
-			.button.special:active {
-				background-color: #793d70;
+			input[type="button"].small,
+			input[type="submit"].small,
+			input[type="reset"].small,
+			button.small,
+			.button.small {
+				font-size: 0.7em;
+				min-width: 14em;
+				padding: 0.5em 0;
 			}
 
 /* Form */
@@ -2316,6 +2240,38 @@
 		.icon > .label {
 			display: none;
 		}
+
+		.icon.style2 {
+			-moz-transition: all 0.2s ease;
+			-webkit-transition: all 0.2s ease;
+			-ms-transition: all 0.2s ease;
+			transition: all 0.2s ease;
+			border-radius: 100%;
+			display: inline-block;
+			padding: 0.5em;
+			border: solid 1px rgba(255, 255, 255, 0.25);
+			background-color: rgba(255, 255, 255, 0.075);
+		}
+
+			.icon.style2:before {
+				display: block;
+				width: 1.25em;
+				height: 1.25em;
+				line-height: 1.25em;
+				font-size: 1.35em;
+			}
+
+			.icon.style2:hover {
+				background-color: rgba(255, 255, 255, 0.25);
+			}
+
+			@media screen and (max-width: 736px) {
+
+				.icon.style2:before {
+					font-size: 1em;
+				}
+
+			}
 
 /* Image */
 
@@ -3099,8 +3055,8 @@
 		.wrapper.style3 {
 			background-color: #000;
 			color: #bfbfbf;
-			background-image: url(../../images/bg.jpg);
-			background-size: cover;
+			background-image: url(../../images/slide01.jpg);
+			background-size:cover;
 			background-attachment: fixed;
 			background-position: center;
 			position: relative;
@@ -4282,8 +4238,11 @@
 /* Footer */
 
 	#footer {
-		padding: 4rem 0 2rem 0 ;
-		background: #000;
+		padding: 2rem 0 1rem 0 ;
+		/* background: #000; */
+		background-color: #000;
+		color: #bfbfbf;
+		background-image: url(../../images/slide00.jpg);
 		text-align: center;
 	}
 
@@ -4306,7 +4265,7 @@
 		@media screen and (max-width: 736px) {
 
 			#footer {
-				padding: 3rem 0 1rem 0 ;
+				padding: 2rem 0 1rem 0 ;
 			}
 
 		}
