--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2639,9 +2639,13 @@ ul.buttons {
 /* Wrapper */
 
 	.wrapper {
-		padding: 6rem 0 4rem 0 ;
+		padding: 6rem 0 4rem 0 ; 
 		position: relative;
 		margin: 0;
+		/* padding-top: 60px;
+  	padding-right: 50px;
+  	padding-bottom: 60px;
+  	padding-left: 50px; */
 	}
 
 		.wrapper > .inner {
@@ -2858,9 +2862,11 @@ ul.buttons {
 			}
 
 		.wrapper.style2 {
+			/* background color refers to color of the background page */
 			background-color: #f2f2f2;
+			/* color refers to color of the font */
 			color: #a6a6a6;
-			padding: 0rem 0 0rem 0 ;
+			/* padding: 2rem 2 2rem 2; */
 			position: relative;
 			margin: 0;
 		}
